# pk_tray

./: CMakeLists.txt  CMakePresets.json
pk_tray/: api.cpp  api.hpp  config.hpp  main.cpp  models.hpp  requests.cpp  requests.hpp  tray.cpp  tray.hpp  utils.hpp
pk_tray/resources/: .gitignore  pk_tray.rc  resource.h
